# musectory

./: ArtworkView.vala  Cli.vala  DFileInfo.vala  DFileUtils.vala  DPlayerOptions.vala  DPlayerStack.vala  Finder.vala  MPlayer.vala  Makefile  MpdOptions.vala  MpdStack.vala  Music.vala  MyUtils.vala  PlaylistBox.vala  PlaylistDrawingArea.vala  README.md  TatamOptions.vala  TatamStack.vala  Text.vala  Tracker.vala  com.github.aharotias2.moegi-player.desktop  com.github.aharotias2.musectory.desktop  dmp.desktop  dmp.vala  dplayer  dplayer.css  dplayer.desktop  dplayer.vala  enums.vala  meson.build  moegi-player.desktop  mpd.css  mpd.desktop  mpd.vala  musectory.css  tatam.css  tatam.desktop  tatam.vala
data/: meson.build
meson/: post_install.sh
po/: POTFILES  com.github.aharotias2.musectory.pot  it.po  ja.po  meson.build  moegi-player.pot  tatam.pot
src/: AppBase.vala  moegi-player.vala  musectory.vala  tatam.vala
src/adapters/: FileInfoAdapter.vala  GstSampleAdapter.vala
src/atoms/: Hex.vala  SmallTime.vala
src/consts/: DefaultCss.vala  Error.vala  IconNames.vala  OptionKey.vala  ProgramName.vala  StyleClass.vala  Text.vala  enums.vala
src/facade/: GstPlayer.vala  MPlayer.vala
src/models/: File.vala  FileInfo.vala  Options.vala  Tracker.vala
src/strategy/: DirectoryReader.vala  MetadataReader.vala  StringJoiner.vala
src/utils/: DFileUtils.vala  Dialogs.vala  FilePathUtils.vala  FileUtils.vala  Files.vala  NumberUtils.vala  PixbufUtils.vala  RGBAUtils.vala  StringUtils.c  StringUtils.vala  TimeUtils.vala
src/widgets/: ArtworkView.vala  Controller.vala  Finder.vala  FinderItem.vala  FinderToolbar.vala  HeaderBar.vala  ImageLoaderThreadData.vala  PlaylistBox.vala  PlaylistDrawingArea.vala  PlaylistItem.vala  Sidebar.vala  Stack.vala  Window.vala
test/: test-base.vala  test-controller.vala  test-file-path.vala  test-files.vala  test-finder.vala  test-glib.vala  test-gst-player-2.vala  test-gst-player.vala  test-gst-player2.vala  test-gst-player3.vala  test-gst-player4.vala  test-metadata.vala  test-mimetype.vala  test-playlist.vala  test-sidebar.vala  test-small-time.vala  test-string-joiner.vala  test-window.vala
test/files/: test-playlist-01.m3u  test-playlist-02.m3u  test-playlist-03.m3u
